# voyis_assessment

./: CMakeLists.txt  DESIGN.md  README.md
src/app1/: main.cpp
src/app2/: main.cpp
src/app3/: main.cpp
src/common/proto/: messages.proto
